--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 
       
 
-      <button class="watch-button" id="watch-button">GUARDA | SCARICA</button>
+              <div class="button-wrapper">
+            <button class="button" id="continueButton" onclick="continueWatching()">GUARDA | SCARICA</button>
+        </div>
     </div>
 	<!-- Adsterra Banner -->
       <div class="ad-banner">
@@ -183,4 +185,5 @@
 </body>
 
 </html>
+
 
