--- a/index.html
+++ b/index.html
@@ -3,128 +3,275 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Guarda film streaming in Altadefinizione</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guarda film streaming in Altadefinizione</title>
+    <style>
+        * { 
+            margin: 0; 
+            padding: 0; 
+            box-sizing: border-box; 
+        }
 
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: #0f0f0f;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 20px;
-    }
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background: linear-gradient(135deg, #0a0a0a, #1c1c1c);
+            background-size: cover;
+            background-position: center;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            padding: 20px;
+            position: relative;
+            overflow-x: hidden;
+            max-width: 100%;
+        }
 
-    .poster-card {
-      background-color: #1e1e1e;
-      padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
-      max-width: 400px;
-      width: 100%;
-      text-align: center;
-      position: relative;
-    }
+        .container {
+            background: rgba(18, 18, 18, 0.95);
+            border-radius: 20px;
+            padding: clamp(20px, 4vw, 30px);
+            width: min(95%, 450px);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            position: relative;
+            overflow: hidden;
+            text-align: center;
+        }
 
-    .poster-image {
-      position: relative;
-      border-radius: 10px;
-      overflow: hidden;
-      margin-bottom: 20px;
-      box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
-    }
+        .logo {
+            width: min(200px, 60%);
+            margin: 0 auto 20px;
+            display: block;
+        }
 
-    .poster-image img {
-      width: 100%;
-      height: auto;
-      display: block;
-      transition: transform 0.3s ease;
-    }
+        .poster-wrapper {
+            margin: 0 auto 20px;
+            width: min(280px, 90%);
+            aspect-ratio: 2/3;
+            border-radius: 15px;
+            overflow: hidden;
+            transform-style: preserve-3d;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+            border: 5px solid rgba(255, 0, 0, 0.8);
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.7);
+            position: relative;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
 
-    .poster-image:hover img {
-      transform: scale(1.05);
-    }
+        .poster-wrapper:hover {
+            transform: scale(1.05);
+            box-shadow: 0 20px 45px rgba(255, 0, 0, 0.9);
+        }
 
-    .play-button {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(255, 0, 0, 0.8);
-      border: none;
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      color: white;
-      font-size: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+        .movie-poster {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
 
-    .play-button:hover {
-      background-color: red;
-    }
+        .play-button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: clamp(60px, 15vw, 80px);
+            height: clamp(60px, 15vw, 80px);
+            background: rgba(255, 0, 0, 0.9);
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 0.9;
+            transition: all 0.3s ease;
+        }
 
-    .details h2 {
-      font-size: 22px;
-      margin: 10px 0 5px;
-    }
+        .play-button:hover {
+            transform: translate(-50%, -50%) scale(1.15);
+            opacity: 1;
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.9);
+        }
 
-    .details p {
-      font-size: 14px;
-      color: #cccccc;
-      margin-bottom: 20px;
-    }
+        .play-button::after {
+            content: '';
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: clamp(15px, 4vw, 20px) 0 clamp(15px, 4vw, 20px) clamp(25px, 6vw, 35px);
+            border-color: transparent transparent transparent #ffffff;
+            margin-left: 7px;
+        }
 
-    .watch-button {
-      background: red;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
+        .movie-title {
+            font-size: clamp(1.5rem, 4vw, 1.8rem);
+            margin-bottom: 10px;
+            padding: 0 10px;
+        }
 
-    .watch-button:hover {
-      background: darkred;
-    }
+        .release-date {
+            color: #ff0000;
+            font-size: clamp(1rem, 3.5vw, 1.2rem);
+            font-weight: 600;
+            margin-bottom: 15px;
+        }
 
-    .ad-banner {
-      margin: 20px auto;
-      display: flex;
-      justify-content: center;
-    }
-  </style>
+        .button-wrapper {
+            width: min(280px, 90%);
+            margin: 0 auto;
+        }
+
+        .button {
+            background: rgba(255, 0, 0, 0.8);
+            color: white;
+            padding: clamp(12px, 3vw, 14px) clamp(25px, 5vw, 35px);
+            border: none;
+            border-radius: 30px;
+            font-size: clamp(14px, 3.5vw, 16px);
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 100%;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.7);
+        }
+
+        .button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.9);
+            background: rgba(255, 0, 0, 1);
+        }
+
+        .button:active {
+            transform: translateY(1px);
+        }
+
+        .loader-circle {
+            position: absolute;
+            border-radius: 50%;
+            border: 4px solid transparent;
+        }
+
+        .circle1 {
+            width: 100%;
+            height: 100%;
+            border-top-color: #ff4d4d;
+            animation: spin-clockwise 2s linear infinite;
+        }
+
+        .circle2 {
+            width: 80%;
+            height: 80%;
+            top: 10%;
+            left: 10%;
+            border-top-color: #e74c3c;
+            animation: spin-counterclockwise 1.5s linear infinite;
+        }
+
+        .circle3 {
+            width: 60%;
+            height: 60%;
+            top: 20%;
+            left: 20%;
+            border-top-color: #f1c40f;
+            animation: spin-clockwise 1s linear infinite;
+        }
+
+        @keyframes spin-clockwise {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        @keyframes spin-counterclockwise {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(-360deg); }
+        }
+
+        .views-count {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 15px;
+            font-size: 0.9rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            z-index: 10;
+        }
+
+        .views-count::before {
+            content: '👁️';
+            font-size: 1rem;
+        }
+
+        #loader-wrapper {
+            margin: 20px auto 0;
+            width: clamp(120px, 30vw, 150px);
+            height: clamp(120px, 30vw, 150px);
+            position: relative;
+            display: none;
+        }
+
+        .progress { 
+            font-size: clamp(1.2rem, 4vw, 1.5rem);
+            margin-top: 10px; 
+            color: #b3b3b3; 
+            display: none; 
+        }
+
+        .please-wait { 
+            font-size: clamp(1.1rem, 3.5vw, 1.3rem);
+            color: #b3b3b3; 
+            font-weight: 600; 
+            margin-top: 20px; 
+            display: none; 
+        }
+
+        /* Android-specific adjustments */
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+                border-radius: 15px;
+            }
+
+            .poster-wrapper {
+                border-width: 3px;
+            }
+        }
+
+        /* Desktop-specific enhancements */
+        @media (min-width: 1024px) {
+            .container {
+                padding: 40px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="poster-card">
-    <div class="poster-image">
-      <img src="" alt="Movie Poster" id="poster-image" />
-      <button class="play-button" id="play-button">&#9658;</button>
-    </div>
-    <div class="details">
-      <h2 id="movie-title">Loading...</h2>
-      <p id="release-date">Lanzamiento: </p>
-
-      
-
-              <div class="button-wrapper">
+    <div class="container">
+        <div id="movieContent">
+            <!-- Movie content will be inserted here -->
+        </div>
+        <div class="button-wrapper">
             <button class="button" id="continueButton" onclick="continueWatching()">GUARDA | SCARICA</button>
         </div>
+        <div id="loader-wrapper">
+            <div class="loader-circle circle1"></div>
+            <div class="loader-circle circle2"></div>
+            <div class="loader-circle circle3"></div>
+        </div>
+        <div class="progress" id="progress">0%</div>
     </div>
 	<!-- Adsterra Banner -->
       <div class="ad-banner">
@@ -185,5 +332,6 @@
 </body>
 
 </html>
+
 
 
