--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     }
 
     .play-button:hover {
-      background-color: red;
+       transform: translateY(-2px);
+       box-shadow: 0 0 20px rgba(255, 0, 0, 0.9);
+       background: rgba(255, 0, 0, 1);
     }
 
     .details h2 {
@@ -183,3 +185,4 @@
 </div>
 </body>
 </html>
+
