--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
     }
 
     .play-button:hover {
-       transform: translateY(-2px);
-       box-shadow: 0 0 20px rgba(255, 0, 0, 0.9);
-       background: rgba(255, 0, 0, 1);
+      background-color: red;
     }
 
     .details h2 {
@@ -185,4 +183,5 @@
 </div>
 </body>
 </html>
+
 
