--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
     }
 
     .watch-button:hover {
-      background: darkred;
+       width: min(280px, 90%);
+       margin: 0 auto;
     }
 
     .ad-banner {
@@ -183,5 +184,6 @@
 </div>
 </body>
 </html>
+
 
 
