--- a/index.html
+++ b/index.html
@@ -89,14 +89,21 @@
     }
 
     .watch-button {
-      background: red;
+      background: rgba(255, 0, 0, 0.8);
       color: white;
+      padding: clamp(12px, 3vw, 14px) clamp(25px, 5vw, 35px);
       border: none;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 5px;
+      border-radius: 30px;
+      font-size: clamp(14px, 3.5vw, 16px);
+      font-weight: 600;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: all 0.3s ease;
+      width: 100%;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 0 15px rgba(255, 0, 0, 0.7);
     }
 
     .watch-button:hover {
@@ -184,6 +191,7 @@
 </div>
 </body>
 </html>
+
 
 
 
