--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
   </div>
 
-      <button class="watch-button" id="watch-button">GUARDA | SCARICA</button>
+      <button class="watch-button" id="watch-button">WATCH NOW</button>
     </div>
 
   <script>
@@ -185,5 +185,6 @@
 </div>
 </body>
 </html>
+
 
 
