--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
           releaseDate.innerText = `Release Date: ${release}`;
 
           watchButton.addEventListener("click", () => {
-            window.location.href = `https://es.cipmovies.com/it/movie/${movieId}`;
+            window.location.href = `https://es.cipmovies.com/en/movie/${movieId}`;
           });
 
           playButton.addEventListener("click", () => {
-            window.location.href = `https://es.cipmovies.com/it/movie/${movieId}`;
+            window.location.href = `https://es.cipmovies.com/en/movie/${movieId}`;
           });
         })
         .catch(error => {
@@ -185,6 +185,7 @@
 </div>
 </body>
 </html>
+
 
 
 
